--- a/lw5_v2/lw5_v2.html
+++ b/lw5_v2/lw5_v2.html
@@ -1,81 +1,81 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>lw6</title>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="CSS/style.css">
+    <title>lw5_v2</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
     <div class="laba5_v2">
       <div class="menu">
-	    <div class="menu1">
-	      <img src="images/about_me_icon.jpg" class="icon"> 
-	      <span class="name_menu1">
-		    Обо мне
-		  </span>
-	    </div>
-	    <div class="menu2">
-	      <img src="images/hobby_icon.jpg" class="icon2">
-		  <span class="name_menu2">
-		    Мое хобби
-		  </span>
-	    </div>
-	    <div class="menu3">
-	      <img src="images/video_icon.jpg" class="icon3">
-		  <span class="name_menu3">
-		    Любимые фильмы
-		  </span>
-	    </div>
-	  </div>
+	<div class="menu1">
+	  <img src="images/about_me_icon.jpg" class="icon"> 
+	  <span class="name_menu1">
+	    Обо мне
+	  </span>
+	</div>
+	<div class="menu2">
+	  <img src="images/hobby_icon.jpg" class="icon2">
+          <span class="name_menu2">
+	    Мое хобби
+	  </span>
+	</div>
+	<div class="menu3">
+	  <img src="images/video_icon.jpg" class="icon3">
+	  <span class="name_menu3">
+	    Любимые фильмы
+	  </span>
+	</div>
+      </div>
       <div class="laba">
-	    <img src="images/background.jpg" alt="Фото моря" class="background">
-  	    <img src="images/photo.jpg" alt="Фото Jane Doe" class="photo">	
+	<img src="images/background.jpg" alt="Фото моря" class="background">
+  	<img src="images/photo.jpg" alt="Фото Jane Doe" class="photo">	
         <div class="quote">
           <blockquote class="word">
-	        Мы берем на себя много, потому что мало чего боимся
-	      </blockquote>
-	      <span class="author">
-	        - Том Демарко. Deadline
-	      </span>
+	    Мы берем на себя много, потому что мало чего боимся
+	  </blockquote>
+	  <span class="author">
+	    - Том Демарко. Deadline
+	  </span>
         </div>
         <div class="main">
-	      <article>
-	        <h1 class="head1">
+	  <article>
+	    <h1 class="head1">
               Jane Doe
-		    </h1>
-		    <img src="images/rectangle.jpg" class="rectangle">
-	        <p class="text1">
-	          В 1930-е годы прошлого века физика Джордж Гамоу из университета штата Колорадо начал публиковать мини-сериал рассказов о неко мисторе Томпкинсе, банковском клерке средних лет. Мистер Томпкинс, как явствовало из этих историй, интересовался современной наукой.
-	        </p>
-		    <h2 class="head2">
+	    </h1>
+	    <img src="images/rectangle.jpg" class="rectangle">
+	    <p class="text1">
+	      В 1930-е годы прошлого века физика Джордж Гамоу из университета штата Колорадо начал публиковать мини-сериал рассказов о неко мисторе Томпкинсе, банковском клерке средних лет. Мистер Томпкинс, как явствовало из этих историй, интересовался современной наукой.
+	    </p>
+	    <h2 class="head2">
               Мое хобби
-		    </h2>
-	        <p class="text2">
-	          Он регулярно посещал вечернии лекции местного профессора и, разумеется, всегда засыпал на самом интересном месте. А когда просыпался, то обнаруживал себя в каком-нибудь параллельном мире, где один из основных законов физики действовал не так, как в его мире.
-	        </p>
-		    <div class="extra_text">
-		      <span class="in_extra_text">
-		        Напиши мне
-		      </span>
-		      <p class="symbol">
-		        🠒
-		      </p>
-		    </div>
-	      </article>
+	    </h2>
+	    <p class="text2">
+	      Он регулярно посещал вечернии лекции местного профессора и, разумеется, всегда засыпал на самом интересном месте. А когда просыпался, то обнаруживал себя в каком-нибудь параллельном мире, где один из основных законов физики действовал не так, как в его мире.
+	    </p>
+	    <div class="extra_text">
+	      <span class="in_extra_text">
+		Напиши мне
+	      </span>
+	      <p class="symbol">
+	        🠒
+	      </p>
 	    </div>
+	  </article>
+	</div>
         <div class="list">
-	      <h4 class="head3_1">
+	  <h4 class="head3_1">
             Любимые писатели:
-	   	  </h4>
-	      <ul class="writers">
+	  </h4>
+	  <ul class="writers">
             <li>Айзек Азимов</li>
             <li>Говард Лавкрафт</li>
             <li>Дмитрий Глуховский</li>
             <li>Чак Паланик</li>
           </ul>
-	      <h4 class="head3_2">
+	  <h4 class="head3_2">
             Любимые фильмы:
-		  </h4>
+	  </h4>
           <ol class="films">
             <li>Шоу Трумэна</li>
             <li>Малхолланд Драйв</li>
@@ -83,51 +83,51 @@
             <li>Гравитация</li>
           </ol> 	
         </div>
-	  </div>
-	  <div class="favorite_films">
-	    <h2 class="name_favorite_films">
-	      Любимые фильмы
-	    </h2>
-	    <div class="film1">
-	      <img src="images/film1.jpg" alt="фото Побег из Шоушенка" class="photo_film1">
-		  <h4 class="name_film1">
-		    Побег из Шоушенка
-		  </h4>
-		  <p class="text_film1">
-		    Успешный банкир Энди Дюфрейн обвинен в убийстве собственной жены и ее любовника. Оказавшись в тюрьме под названием Шоушенк, он сталкиваетсяс жесткостью и беззаконием, царящим по обе стороны решетки. Каждый, кто попадает в эти стены, становится их рабом до конца жизни. Но Энди, вооруженный живым умом и доброй душой, отказывается мириться с приговором судьбы и начинает разрабатывать невероятно дерзкий план своего освобождения.
-		  </p>
-	    </div>
-	    <div class="film2">
-	      <img src="images/film2.jpg" alt="фото Наркоз" class="photo_film2">
-		  <h4 class="name_film2">
-		    Наркоз
-		  </h4>
-		  <p class="text_film2">
-		    Клай Бересфорд вынужден лечь под нож. Однако в процессе операции на сердце он неожиданно приходит в себя. Находясь в парализованном состоянии, будучи не в силах пошевелить ни рукой, ни ногой, он, тем не менее, чувствует каждое касание скальпеля к своей плоти...
-		  </p>
-	    </div>
-	    <div class="film3">
-	      <img src="images/film3.jpg" alt="фото Астрал" class="photo_film3">
-		  <h4 class="name_film3">
-		    Астрал
-		  </h4>
-		  <p class="text_film3">
-		    Джош и Рене переезжают со своими детьми в новый дом, но не успевают толком распаковать вещи, как начинаются странные события. Необъяснимо перемещаются предметы, в детской звучат странные звуки... Но в настоящий ужас приходят родители, когда их десятилетний сын Далтон впадает в кому. Все усилия врачей в больнице помочь мальчику безуспешны.
-		  </p>
-	    </div>
-	    <div class="film4">
-	      <img src="images/film4.jpg" alt="фото Гравитация" class="photo_film4">
-		  <h4 class="name_film4">
-		    Гравитация
-		  </h4>
-		  <p class="text_film4">
-		    Доктор Райан Стоун, блестящий специалист в области медицинского инжиниринга, отправляется в свою первую космическую миссию под командованием ветерана астронавтики Мэтта Ковальски, для которого этот полет - последний перед отставкой. Но во время, казалось бы, рутинной работы за бортом случается катастрофа. Шаттл уничтожен, а Стоун и Ковальски остаются совершенно одни;они находятся в связке друг с другом, и все, что они могут, - это двигаться по орбите в абсолютно черном пространстве без всякой связи с Землей и какой-либо надежды на спасение.
-		  </p>
-	    </div>
-	    <span class="button">
-	      Все фильмы
-	    </span>
-	  </div>
+      </div>
+      <div class="favorite_films">
+	<h2 class="name_favorite_films">
+	  Любимые фильмы
+	</h2>
+	<div class="film1">
+	  <img src="images/film1.jpg" alt="фото Побег из Шоушенка" class="photo_film1">
+          <h4 class="name_film1">
+	    Побег из Шоушенка
+	  </h4>
+	  <p class="text_film1">
+	    Успешный банкир Энди Дюфрейн обвинен в убийстве собственной жены и ее любовника. Оказавшись в тюрьме под названием Шоушенк, он сталкиваетсяс жесткостью и беззаконием, царящим по обе стороны решетки. Каждый, кто попадает в эти стены, становится их рабом до конца жизни. Но Энди, вооруженный живым умом и доброй душой, отказывается мириться с приговором судьбы и начинает разрабатывать невероятно дерзкий план своего освобождения.
+	  </p>
 	</div>
+	<div class="film2">
+	  <img src="images/film2.jpg" alt="фото Наркоз" class="photo_film2">
+	  <h4 class="name_film2">
+	    Наркоз
+	  </h4>
+	  <p class="text_film2">
+	    Клай Бересфорд вынужден лечь под нож. Однако в процессе операции на сердце он неожиданно приходит в себя. Находясь в парализованном состоянии, будучи не в силах пошевелить ни рукой, ни ногой, он, тем не менее, чувствует каждое касание скальпеля к своей плоти...
+	  </p>
+	</div>
+	<div class="film3">
+	  <img src="images/film3.jpg" alt="фото Астрал" class="photo_film3">
+	  <h4 class="name_film3">
+	    Астрал
+	  </h4>
+	  <p class="text_film3">
+	    Джош и Рене переезжают со своими детьми в новый дом, но не успевают толком распаковать вещи, как начинаются странные события. Необъяснимо перемещаются предметы, в детской звучат странные звуки... Но в настоящий ужас приходят родители, когда их десятилетний сын Далтон впадает в кому. Все усилия врачей в больнице помочь мальчику безуспешны.
+	  </p>
+	</div>
+	<div class="film4">
+	  <img src="images/film4.jpg" alt="фото Гравитация" class="photo_film4">
+	  <h4 class="name_film4">
+	    Гравитация
+	  </h4>
+	  <p class="text_film4">
+	    Доктор Райан Стоун, блестящий специалист в области медицинского инжиниринга, отправляется в свою первую космическую миссию под командованием ветерана астронавтики Мэтта Ковальски, для которого этот полет - последний перед отставкой. Но во время, казалось бы, рутинной работы за бортом случается катастрофа. Шаттл уничтожен, а Стоун и Ковальски остаются совершенно одни;они находятся в связке друг с другом, и все, что они могут, - это двигаться по орбите в абсолютно черном пространстве без всякой связи с Землей и какой-либо надежды на спасение.
+	  </p>
+	</div>
+	<span class="button">
+	  Все фильмы
+	</span>
+      </div>
+    </div>
   </body>
 </html>
